--- a/resources/views/home.ejs
+++ b/resources/views/home.ejs
@@ -327,14 +327,14 @@
                 <div class="px-6">
                   <img
                     alt="..."
-                    src="https://demos.creative-tim.com/tailwindcss-starter-project/_next/static/images/team-3-800x800-19201574ed51f77138a739c0452ca104.jpg"
+                    src="https://ojurire.com/wp-content/uploads/2020/03/unnamed.jpg"
                     class="shadow-lg rounded-full max-w-full mx-auto"
                     style="max-width: 120px;"
                   />
                   <div class="pt-6 text-center">
-                    <h5 class="text-xl font-bold">Alexa Smith</h5>
+                    <h5 class="text-xl font-bold">Ogunwusi Ojurire</h5>
                     <p class="mt-1 text-sm text-gray-500 uppercase font-semibold">
-                      UI/UX Designer
+                      Make up artist
                     </p>
                     <div class="mt-6">
                       <button
