--- a/resources/views/projects.ejs
+++ b/resources/views/projects.ejs
@@ -1,272 +1,184 @@
 <section class="header_main mb-24">
-    <main class="profile-page">
-        <section class="relative block" style="height: 250px;">
-          <div
-            class="absolute top-0 w-full h-full bg-center bg-cover"
-            style='background-image: url("https://images.unsplash.com/photo-1499336315816-097655dcfbda?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=2710&amp;q=80");'
-          >
-            <span
-              id="blackOverlay"
-              class="w-full h-full absolute opacity-50 bg-black"
-            ></span>
-          </div>
-          <div
-            class="top-auto bottom-0 left-0 right-0 w-full absolute pointer-events-none overflow-hidden"
-            style="height: 70px; transform: translateZ(0px);"
-          >
-            <svg
-              class="absolute bottom-0 overflow-hidden"
-              xmlns="http://www.w3.org/2000/svg"
-              preserveAspectRatio="none"
-              version="1.1"
-              viewBox="0 0 2560 100"
-              x="0"
-              y="0"
-            >
-              <polygon
-                class="text-gray-300 fill-current"
-                points="2560 0 2560 100 0 100"
-              ></polygon>
-            </svg>
-          </div>
-        </section>
-        <!-- contact start -->
+  <main class="profile-page">
+    <section class="relative block" style="height: 250px;">
+      <div class="absolute top-0 w-full h-full bg-center bg-cover"
+        style='background-image: url("https://images.unsplash.com/photo-1499336315816-097655dcfbda?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=2710&amp;q=80");'>
+        <span id="blackOverlay" class="w-full h-full absolute opacity-50 bg-black"></span>
+      </div>
+      <div class="top-auto bottom-0 left-0 right-0 w-full absolute pointer-events-none overflow-hidden"
+        style="height: 70px; transform: translateZ(0px);">
+        <svg class="absolute bottom-0 overflow-hidden" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none"
+          version="1.1" viewBox="0 0 2560 100" x="0" y="0">
+          <polygon class="text-gray-300 fill-current" points="2560 0 2560 100 0 100"></polygon>
+        </svg>
+      </div>
+    </section>
+    <!-- Projects start -->
     <section class="relative block bg-gray-900">
-    <div
-      class="bottom-auto top-0 left-0 right-0 w-full absolute pointer-events-none overflow-hidden -mt-20"
-      style="height: 80px; transform: translateZ(0px);"
-    >
-      <svg
-        class="absolute bottom-0 overflow-hidden"
-        xmlns="http://www.w3.org/2000/svg"
-        preserveAspectRatio="none"
-        version="1.1"
-        viewBox="0 0 2560 100"
-        x="0"
-        y="0"
-      >
-        <polygon
-          class="text-gray-900 fill-current"
-          points="2560 0 2560 100 0 100"
-        ></polygon>
-      </svg>
-    </div>
-    
-  </section>
+      <div class="bottom-auto top-0 left-0 right-0 w-full absolute pointer-events-none overflow-hidden -mt-20"
+        style="height: 80px; transform: translateZ(0px);">
+        <svg class="absolute bottom-0 overflow-hidden" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none"
+          version="1.1" viewBox="0 0 2560 100" x="0" y="0">
+          <polygon class="text-gray-900 fill-current" points="2560 0 2560 100 0 100"></polygon>
+        </svg>
+      </div>
 
-  
-  <section class="relative block lg:pt-0 bg-gray-900">
-    <h2 class="text-white text-4xl mb-10 text-center font-semibold font-heading">Our Projects</h2>
-<!-- start -->
-<div class="mt-4 flex flex-wrap">
-  <div class="w-full md:w-4/12 px-4 mr-auto ml-auto">
-    <a href="https://saizzler.com" target="_blank">
-    <div
-      class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded-lg bg-pink-600"
-    >
-      <img
-        alt="..."
-        src="https://saizzler.com/wp-content/uploads/2020/10/NEW-1536x864.jpg"
-        class="w-full align-middle rounded-t-lg"
-      />
-      <blockquote class="relative p-8 mb-4">
-        <svg
-          preserveAspectRatio="none"
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 583 95"
-          class="absolute left-0 w-full block"
-          style="height: 95px; top: -94px;"
-        >
-          <!-- <polygon
+    </section>
+
+
+    <section class="relative block lg:pt-0 bg-gray-900">
+      <h2 class="text-white text-4xl mb-10 text-center font-semibold font-heading">Our Projects</h2>
+      <!-- start -->
+      <div class="mt-4 flex flex-wrap">
+        <div class="w-full md:w-4/12 px-4 mr-auto ml-auto">
+          <a href="https://saizzler.com" target="_blank">
+            <div
+              class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded-lg bg-blue-600">
+              <img alt="..." src="https://saizzler.com/wp-content/uploads/2020/10/NEW-1536x864.jpg"
+                class="w-full align-middle rounded-t-lg" />
+              <blockquote class="relative p-8 mb-4">
+                <svg preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 583 95"
+                  class="absolute left-0 w-full block" style="height: 95px; top: -94px;">
+                  <!-- <polygon
             points="-30,95 583,95 583,65"
             class="text-pink-600 fill-current"
           ></polygon> -->
-        </svg>
-        <h4 class="text-xl font-bold text-white">
-          Top Notch Services
-        </h4>
-        <p class="text-md font-light mt-2 text-white">
-          The Arctic Ocean freezes every winter and much of the
-          sea-ice then thaws every summer, and that process will
-          continue whatever happens.
-        </p>
-      </blockquote>
-    </div>
-  </a>
-  </div>
+                </svg>
+                <h4 class="text-xl font-bold text-white">
+                  Saizzler Architecture
+                </h4>
+                <p class="text-md font-light mt-2 text-white">
+                  The Arctic Ocean freezes every winter and much of the
+                  sea-ice then thaws every summer, and that process will
+                  continue whatever happens.
+                </p>
+              </blockquote>
+            </div>
+          </a>
+        </div>
 
-  <div class="w-full md:w-4/12 px-4 mr-auto ml-auto">
-                <div
-                  class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded-lg bg-pink-600"
-                >
-                  <img
-                    alt="..."
-                    src="https://saizzler.com/wp-content/uploads/2020/10/new-restaurant-3-scaled.jpg"
-                    class="w-full align-middle rounded-t-lg"
-                  />
-                  <blockquote class="relative p-8 mb-4">
-                    <svg
-                      preserveAspectRatio="none"
-                      xmlns="http://www.w3.org/2000/svg"
-                      viewBox="0 0 583 95"
-                      class="absolute left-0 w-full block"
-                      style="height: 95px; top: -94px;"
-                    >
-                      <!-- <polygon
+        <div class="w-full md:w-4/12 px-4 mr-auto ml-auto">
+          <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded-lg bg-blue-600">
+            <img alt="..." src="https://saizzler.com/wp-content/uploads/2020/10/NEW-1536x864.jpg"
+              class="w-full align-middle rounded-t-lg" />
+            <blockquote class="relative p-8 mb-4">
+              <svg preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 583 95"
+                class="absolute left-0 w-full block" style="height: 95px; top: -94px;">
+                <!-- <polygon
                         points="-30,95 583,95 583,65"
                         class="text-pink-600 fill-current"
                       ></polygon> -->
-                    </svg>
-                    <h4 class="text-xl font-bold text-white">
-                      Top Notch Services
-                    </h4>
-                    <p class="text-md font-light mt-2 text-white">
-                      The Arctic Ocean freezes every winter and much of the
-                      sea-ice then thaws every summer, and that process will
-                      continue whatever happens.
-                    </p>
-                  </blockquote>
-                </div>
-              </div>
+              </svg>
+              <h4 class="text-xl font-bold text-white">
+                Top Notch Services
+              </h4>
+              <p class="text-md font-light mt-2 text-white">
+                The Arctic Ocean freezes every winter and much of the
+                sea-ice then thaws every summer, and that process will
+                continue whatever happens.
+              </p>
+            </blockquote>
+          </div>
+        </div>
 
-  <div class="w-full md:w-4/12 px-4 mr-auto ml-auto">
-                <div
-                  class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded-lg bg-pink-600"
-                >
-                  <img
-                    alt="..."
-                    src="https://saizzler.com/wp-content/uploads/2020/10/5-1536x864.jpg"
-                    class="w-full align-middle rounded-t-lg"
-                  />
-                  <blockquote class="relative p-8 mb-4">
-                    <svg
-                      preserveAspectRatio="none"
-                      xmlns="http://www.w3.org/2000/svg"
-                      viewBox="0 0 583 95"
-                      class="absolute left-0 w-full block"
-                      style="height: 95px; top: -94px;"
-                    >
-                      <!-- <polygon
+        <div class="w-full md:w-4/12 px-4 mr-auto ml-auto">
+          <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded-lg bg-blue-600">
+            <img alt="..." src="https://saizzler.com/wp-content/uploads/2020/10/5-1536x864.jpg"
+              class="w-full align-middle rounded-t-lg" />
+            <blockquote class="relative p-8 mb-4">
+              <svg preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 583 95"
+                class="absolute left-0 w-full block" style="height: 95px; top: -94px;">
+                <!-- <polygon
                         points="-30,95 583,95 583,65"
                         class="text-pink-600 fill-current"
                       ></polygon> -->
-                    </svg>
-                    <h4 class="text-xl font-bold text-white">
-                      Top Notch Services
-                    </h4>
-                    <p class="text-md font-light mt-2 text-white">
-                      The Arctic Ocean freezes every winter and much of the
-                      sea-ice then thaws every summer, and that process will
-                      continue whatever happens.
-                    </p>
-                  </blockquote>
-                </div>
-              </div>
+              </svg>
+              <h4 class="text-xl font-bold text-white">
+                Top Notch Services
+              </h4>
+              <p class="text-md font-light mt-2 text-white">
+                The Arctic Ocean freezes every winter and much of the
+                sea-ice then thaws every summer, and that process will
+                continue whatever happens.
+              </p>
+            </blockquote>
+          </div>
+        </div>
 
-              <div class="w-full md:w-4/12 px-4 mr-auto ml-auto">
-                <div
-                  class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded-lg bg-pink-600"
-                >
-                  <img
-                    alt="..."
-                    src="https://saizzler.com/wp-content/uploads/2020/10/5-1536x864.jpg"
-                    class="w-full align-middle rounded-t-lg"
-                  />
-                  <blockquote class="relative p-8 mb-4">
-                    <svg
-                      preserveAspectRatio="none"
-                      xmlns="http://www.w3.org/2000/svg"
-                      viewBox="0 0 583 95"
-                      class="absolute left-0 w-full block"
-                      style="height: 95px; top: -94px;"
-                    >
-                      <!-- <polygon
+        <div class="w-full md:w-4/12 px-4 mr-auto ml-auto">
+          <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded-lg bg-blue-600">
+            <img alt="..." src="https://saizzler.com/wp-content/uploads/2020/10/5-1536x864.jpg"
+              class="w-full align-middle rounded-t-lg" />
+            <blockquote class="relative p-8 mb-4">
+              <svg preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 583 95"
+                class="absolute left-0 w-full block" style="height: 95px; top: -94px;">
+                <!-- <polygon
                         points="-30,95 583,95 583,65"
                         class="text-pink-600 fill-current"
                       ></polygon> -->
-                    </svg>
-                    <h4 class="text-xl font-bold text-white">
-                      Top Notch Services
-                    </h4>
-                    <p class="text-md font-light mt-2 text-white">
-                      The Arctic Ocean freezes every winter and much of the
-                      sea-ice then thaws every summer, and that process will
-                      continue whatever happens.
-                    </p>
-                  </blockquote>
-                </div>
-              </div>
+              </svg>
+              <h4 class="text-xl font-bold text-white">
+                Top Notch Services
+              </h4>
+              <p class="text-md font-light mt-2 text-white">
+                The Arctic Ocean freezes every winter and much of the
+                sea-ice then thaws every summer, and that process will
+                continue whatever happens.
+              </p>
+            </blockquote>
+          </div>
+        </div>
 
-              <div class="w-full md:w-4/12 px-4 mr-auto ml-auto">
-                <div
-                  class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded-lg bg-pink-600"
-                >
-                  <img
-                    alt="..."
-                    src="https://saizzler.com/wp-content/uploads/2020/10/5-1536x864.jpg"
-                    class="w-full align-middle rounded-t-lg"
-                  />
-                  <blockquote class="relative p-8 mb-4">
-                    <svg
-                      preserveAspectRatio="none"
-                      xmlns="http://www.w3.org/2000/svg"
-                      viewBox="0 0 583 95"
-                      class="absolute left-0 w-full block"
-                      style="height: 95px; top: -94px;"
-                    >
-                      <!-- <polygon
+        <div class="w-full md:w-4/12 px-4 mr-auto ml-auto">
+          <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded-lg bg-blue-600">
+            <img alt="..." src="https://saizzler.com/wp-content/uploads/2020/10/5-1536x864.jpg"
+              class="w-full align-middle rounded-t-lg" />
+            <blockquote class="relative p-8 mb-4">
+              <svg preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 583 95"
+                class="absolute left-0 w-full block" style="height: 95px; top: -94px;">
+                <!-- <polygon
                         points="-30,95 583,95 583,65"
                         class="text-pink-600 fill-current"
                       ></polygon> -->
-                    </svg>
-                    <h4 class="text-xl font-bold text-white">
-                      Top Notch Services
-                    </h4>
-                    <p class="text-md font-light mt-2 text-white">
-                      The Arctic Ocean freezes every winter and much of the
-                      sea-ice then thaws every summer, and that process will
-                      continue whatever happens.
-                    </p>
-                  </blockquote>
-                </div>
-              </div>
+              </svg>
+              <h4 class="text-xl font-bold text-white">
+                Top Notch Services
+              </h4>
+              <p class="text-md font-light mt-2 text-white">
+                The Arctic Ocean freezes every winter and much of the
+                sea-ice then thaws every summer, and that process will
+                continue whatever happens.
+              </p>
+            </blockquote>
+          </div>
+        </div>
 
-              <div class="w-full md:w-4/12 px-4 mr-auto ml-auto">
-                <div
-                  class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded-lg bg-pink-600"
-                >
-                  <img
-                    alt="..."
-                    src="https://saizzler.com/wp-content/uploads/2020/10/5-1536x864.jpg"
-                    class="w-full align-middle rounded-t-lg"
-                  />
-                  <blockquote class="relative p-8 mb-4">
-                    <svg
-                      preserveAspectRatio="none"
-                      xmlns="http://www.w3.org/2000/svg"
-                      viewBox="0 0 583 95"
-                      class="absolute left-0 w-full block"
-                      style="height: 95px; top: -94px;"
-                    >
-                      <!-- <polygon
+        <div class="w-full md:w-4/12 px-4 mr-auto ml-auto">
+          <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded-lg bg-blue-600">
+            <img alt="..." src="https://saizzler.com/wp-content/uploads/2020/10/5-1536x864.jpg"
+              class="w-full align-middle rounded-t-lg" />
+            <blockquote class="relative p-8 mb-4">
+              <svg preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 583 95"
+                class="absolute left-0 w-full block" style="height: 95px; top: -94px;">
+                <!-- <polygon
                         points="-30,95 583,95 583,65"
                         class="text-pink-600 fill-current"
                       ></polygon> -->
-                    </svg>
-                    <h4 class="text-xl font-bold text-white">
-                      Top Notch Services
-                    </h4>
-                    <p class="text-md font-light mt-2 text-white">
-                      The Arctic Ocean freezes every winter and much of the
-                      sea-ice then thaws every summer, and that process will
-                      continue whatever happens.
-                    </p>
-                  </blockquote>
-                </div>
-              </div>
-</div>
-<!-- stop -->
-  </section>
-<!-- contact end -->
-      </main>
+              </svg>
+              <h4 class="text-xl font-bold text-white">
+                Top Notch Services
+              </h4>
+              <p class="text-md font-light mt-2 text-white">
+                The Arctic Ocean freezes every winter and much of the
+                sea-ice then thaws every summer, and that process will
+                continue whatever happens.
+              </p>
+            </blockquote>
+          </div>
+        </div>
+      </div>
+      <!-- stop -->
+    </section>
+    <!-- Projects end -->
+  </main>
 </section>
