--- a/resources/views/about.ejs
+++ b/resources/views/about.ejs
@@ -55,7 +55,7 @@
                   >
                     <div class="py-6 px-3 mt-32 sm:mt-0">
                       <button
-                        class="bg-pink-500 active:bg-pink-600 uppercase text-white font-bold hover:shadow-md shadow text-xs px-4 py-2 rounded outline-none focus:outline-none sm:mr-2 mb-1"
+                        class="bg-blue-500 active:bg-blue-600 uppercase text-white font-bold hover:shadow-md shadow text-xs px-4 py-2 rounded outline-none focus:outline-none sm:mr-2 mb-1"
                         type="button"
                         style="transition: all 0.15s ease 0s;"
                       >
@@ -119,7 +119,7 @@
                         warm, intimate feel with a solid groove structure. An
                         artist of considerable range.
                       </p>
-                      <a href="#pablo" class="font-normal text-pink-500"
+                      <a href="#pablo" class="font-normal text-blue-500"
                         >Show more</a
                       >
                     </div>
