images and indigo color done

--- a/resources/views/projects.ejs
+++ b/resources/views/projects.ejs
@@ -33,7 +33,7 @@
         <div class="w-full md:w-4/12 px-4 mr-auto ml-auto">
           <a href="https://saizzler.com" target="_blank">
             <div
-              class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded-lg bg-blue-600">
+              class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded-lg bg-indigo-600">
               <img alt="..." src="https://saizzler.com/wp-content/uploads/2020/10/NEW-1536x864.jpg"
                 class="w-full align-middle rounded-t-lg" />
               <blockquote class="relative p-8 mb-4">
@@ -58,7 +58,7 @@
         </div>
 
         <div class="w-full md:w-4/12 px-4 mr-auto ml-auto">
-          <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded-lg bg-blue-600">
+          <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded-lg bg-indigo-600">
             <img alt="..." src="https://saizzler.com/wp-content/uploads/2020/10/NEW-1536x864.jpg"
               class="w-full align-middle rounded-t-lg" />
             <blockquote class="relative p-8 mb-4">
@@ -82,7 +82,7 @@
         </div>
 
         <div class="w-full md:w-4/12 px-4 mr-auto ml-auto">
-          <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded-lg bg-blue-600">
+          <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded-lg bg-indigo-600">
             <img alt="..." src="https://saizzler.com/wp-content/uploads/2020/10/5-1536x864.jpg"
               class="w-full align-middle rounded-t-lg" />
             <blockquote class="relative p-8 mb-4">
@@ -106,7 +106,7 @@
         </div>
 
         <div class="w-full md:w-4/12 px-4 mr-auto ml-auto">
-          <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded-lg bg-blue-600">
+          <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded-lg bg-indigo-600">
             <img alt="..." src="https://saizzler.com/wp-content/uploads/2020/10/5-1536x864.jpg"
               class="w-full align-middle rounded-t-lg" />
             <blockquote class="relative p-8 mb-4">
@@ -130,7 +130,7 @@
         </div>
 
         <div class="w-full md:w-4/12 px-4 mr-auto ml-auto">
-          <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded-lg bg-blue-600">
+          <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded-lg bg-indigo-600">
             <img alt="..." src="https://saizzler.com/wp-content/uploads/2020/10/5-1536x864.jpg"
               class="w-full align-middle rounded-t-lg" />
             <blockquote class="relative p-8 mb-4">
@@ -154,7 +154,7 @@
         </div>
 
         <div class="w-full md:w-4/12 px-4 mr-auto ml-auto">
-          <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded-lg bg-blue-600">
+          <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded-lg bg-indigo-600">
             <img alt="..." src="https://saizzler.com/wp-content/uploads/2020/10/5-1536x864.jpg"
               class="w-full align-middle rounded-t-lg" />
             <blockquote class="relative p-8 mb-4">
