--- a/resources/views/home.ejs
+++ b/resources/views/home.ejs
@@ -6,7 +6,7 @@
         >
           <div
             class="absolute top-0 w-full h-full bg-center bg-cover"
-            style='background-image: url("https://images.unsplash.com/photo-1557804506-669a67965ba0?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=1267&amp;q=80");'
+            style='background-image: url("http://www.civil.cea.howard.edu/sites/civil.howard.edu/files/Undergrad.jpg");'
           >
             <span
               id="blackOverlay"
@@ -137,11 +137,11 @@
               <!-- start -->
               <div class="w-full md:w-4/12 px-4 mr-auto ml-auto">
                 <div
-                  class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded-lg bg-pink-600"
+                  class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded-lg bg-indigo-600"
                 >
                   <img
                     alt="..."
-                    src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=1051&amp;q=80"
+                    src="https://dynamicbusiness.com.au/wp-content/uploads/2019/12/DB-article-size-copy-4.png"
                     class="w-full align-middle rounded-t-lg"
                   />
                   <blockquote class="relative p-8 mb-4">
@@ -154,7 +154,7 @@
                     >
                       <polygon
                         points="-30,95 583,95 583,65"
-                        class="text-pink-600 fill-current"
+                        class="text-indigo-600 fill-current"
                       ></polygon>
                     </svg>
                     <h4 class="text-xl font-bold text-white">
@@ -198,13 +198,13 @@
                 <img
                   alt="..."
                   class="max-w-full rounded-lg shadow-lg"
-                  src="https://images.unsplash.com/photo-1555212697-194d092e3b8f?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=634&amp;q=80"
+                  src="https://vladimerbotsvadze.files.wordpress.com/2015/02/8204dcb5b2c8fbf6a7b15f92b42a4b57.jpg"
                 />
               </div>
               <div class="w-full md:w-5/12 ml-auto mr-auto px-4">
                 <div class="md:pr-12">
                   <div
-                    class="text-pink-600 p-3 text-center inline-flex items-center justify-center w-16 h-16 mb-6 shadow-lg rounded-full bg-pink-300"
+                    class="text-indigo-600 p-3 text-center inline-flex items-center justify-center w-16 h-16 mb-6 shadow-lg rounded-full bg-indigo-300"
                   >
                     <i class="fas fa-rocket text-xl"></i>
                   </div>
@@ -219,7 +219,7 @@
                       <div class="flex items-center">
                         <div>
                           <span
-                            class="text-xs font-semibold inline-block py-1 px-2 uppercase rounded-full text-pink-600 bg-pink-200 mr-3"
+                            class="text-xs font-semibold inline-block py-1 px-2 uppercase rounded-full text-indigo-600 bg-indigo-200 mr-3"
                             ><i class="fas fa-fingerprint"></i
                           ></span>
                         </div>
@@ -234,7 +234,7 @@
                       <div class="flex items-center">
                         <div>
                           <span
-                            class="text-xs font-semibold inline-block py-1 px-2 uppercase rounded-full text-pink-600 bg-pink-200 mr-3"
+                            class="text-xs font-semibold inline-block py-1 px-2 uppercase rounded-full text-indigo-600 bg-indigo-200 mr-3"
                             ><i class="fab fa-html5"></i
                           ></span>
                         </div>
@@ -247,7 +247,7 @@
                       <div class="flex items-center">
                         <div>
                           <span
-                            class="text-xs font-semibold inline-block py-1 px-2 uppercase rounded-full text-pink-600 bg-pink-200 mr-3"
+                            class="text-xs font-semibold inline-block py-1 px-2 uppercase rounded-full text-indigo-600 bg-indigo-200 mr-3"
                             ><i class="far fa-paper-plane"></i
                           ></span>
                         </div>
@@ -372,7 +372,7 @@
                     </p>
                     <div class="mt-6">
                       <button
-                        class="bg-pink-500 text-white w-8 h-8 rounded-full outline-none focus:outline-none mr-1 mb-1"
+                        class="bg-indigo-500 text-white w-8 h-8 rounded-full outline-none focus:outline-none mr-1 mb-1"
                         type="button"
                       >
                         <i class="fab fa-dribbble"></i></button
