projects added and sized

--- a/resources/views/projects.ejs
+++ b/resources/views/projects.ejs
@@ -31,10 +31,10 @@
       <!-- start -->
       <div class="mt-4 flex flex-wrap">
         <div class="w-full md:w-4/12 px-4 mr-auto ml-auto">
-          <a href="https://saizzler.com" target="_blank">
+          <a href="https://netflixx.netlify.app/" target="_blank">
             <div
               class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded-lg bg-indigo-600">
-              <img alt="..." src="https://saizzler.com/wp-content/uploads/2020/10/NEW-1536x864.jpg"
+              <img alt="..." src="https://images.pexels.com/photos/4009409/pexels-photo-4009409.jpeg?auto=format&fit=crop&w=500&q=60&h=280"
                 class="w-full align-middle rounded-t-lg" />
               <blockquote class="relative p-8 mb-4">
                 <svg preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 583 95"
@@ -45,7 +45,7 @@
           ></polygon> -->
                 </svg>
                 <h4 class="text-xl font-bold text-white">
-                  Saizzler Architecture
+                  Movie Rating WebApp
                 </h4>
                 <p class="text-md font-light mt-2 text-white">
                   The Arctic Ocean freezes every winter and much of the
@@ -58,6 +58,33 @@
         </div>
 
         <div class="w-full md:w-4/12 px-4 mr-auto ml-auto">
+          <a href="https://ojurire.com/" target="_blank">
+          <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded-lg bg-indigo-600">
+            <img alt="..." src="https://images.unsplash.com/photo-1581389042184-bfc74c8af48e?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MjZ8fGxhc2hlc3xlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60&h=280"
+              class="w-full align-middle rounded-t-lg" />
+            <blockquote class="relative p-8 mb-4">
+              <svg preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 583 95"
+                class="absolute left-0 w-full block" style="height: 95px; top: -94px;">
+                <!-- <polygon
+                        points="-30,95 583,95 583,65"
+                        class="text-pink-600 fill-current"
+                      ></polygon> -->
+              </svg>
+              <h4 class="text-xl font-bold text-white">
+                Lashed By Ojurire
+              </h4>
+              <p class="text-md font-light mt-2 text-white">
+                The Arctic Ocean freezes every winter and much of the
+                sea-ice then thaws every summer, and that process will
+                continue whatever happens.
+              </p>
+            </blockquote>
+          </div>
+        </a>
+        </div>
+
+        <div class="w-full md:w-4/12 px-4 mr-auto ml-auto">
+          <a href="https://saizzler.com/" target="_blank">
           <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded-lg bg-indigo-600">
             <img alt="..." src="https://saizzler.com/wp-content/uploads/2020/10/NEW-1536x864.jpg"
               class="w-full align-middle rounded-t-lg" />
@@ -70,7 +97,7 @@
                       ></polygon> -->
               </svg>
               <h4 class="text-xl font-bold text-white">
-                Top Notch Services
+                Saizzler Architectural Firm
               </h4>
               <p class="text-md font-light mt-2 text-white">
                 The Arctic Ocean freezes every winter and much of the
@@ -79,30 +106,7 @@
               </p>
             </blockquote>
           </div>
-        </div>
-
-        <div class="w-full md:w-4/12 px-4 mr-auto ml-auto">
-          <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded-lg bg-indigo-600">
-            <img alt="..." src="https://saizzler.com/wp-content/uploads/2020/10/5-1536x864.jpg"
-              class="w-full align-middle rounded-t-lg" />
-            <blockquote class="relative p-8 mb-4">
-              <svg preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 583 95"
-                class="absolute left-0 w-full block" style="height: 95px; top: -94px;">
-                <!-- <polygon
-                        points="-30,95 583,95 583,65"
-                        class="text-pink-600 fill-current"
-                      ></polygon> -->
-              </svg>
-              <h4 class="text-xl font-bold text-white">
-                Top Notch Services
-              </h4>
-              <p class="text-md font-light mt-2 text-white">
-                The Arctic Ocean freezes every winter and much of the
-                sea-ice then thaws every summer, and that process will
-                continue whatever happens.
-              </p>
-            </blockquote>
-          </div>
+        </a>
         </div>
 
         <div class="w-full md:w-4/12 px-4 mr-auto ml-auto">
